# B-12_group_quarrel

./: .gitignore  README.md  pyproject.toml  req.txt
articles/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
conf/: settings.py  urls.py
templates/: base.html
templates/users/: login.html  signup.html
users/: admin.py  models.py  serializer.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_date_of_birth_alter_user_profile_photo_and_more.py  0002_follow_fw_alter_follow_fl_and_more.py  0002_user_age.py
